--- a/DefectReporter/Client/Shared/NavMenu.razor
+++ b/DefectReporter/Client/Shared/NavMenu.razor
@@ -15,13 +15,28 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="defect/index">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Defects
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="defect/create">
+                <span class="oi oi-file" aria-hidden="true"></span> Report defect
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="feature/index">
+                <span class="oi oi-task" aria-hidden="true"></span> Features
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="feature/create">
+                <span class="oi oi-plus" aria-hidden="true"></span> Add feature
+            </NavLink>
+        </div>
+        <div class="nav-item px-3 fixed-bottom">
+            <NavLink class="nav-link" href="/faq">
+                <span class="oi oi-question-mark" aria-hidden="true"></span> FAQ
             </NavLink>
         </div>
     </nav>
