--- a/DefectReporter/Client/Pages/Management/Releases/Index.razor
+++ b/DefectReporter/Client/Pages/Management/Releases/Index.razor
@@ -6,6 +6,10 @@
 
 @if (releases.Count != 0)
 {
+    <div class="text-end">
+        <button type="button" class="btn btn-success" @onclick="() => AddRelease()">Add new</button>
+    </div>
+    <br />
     <div class="card">
         <div class="card-header">
             <h3>Available Releases</h3>
@@ -24,11 +28,15 @@
         </ul>
     </div>
 }
+else if (releases == null)
+{
+    <div class="spinner-border text-center" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+}
 else
 {
-    <div class="alert alert-warning" role="alert">
-        <h3>Currently, there are no releases in the database.</h3>
-    </div>
+    <h3>Currently there is no releases in database.</h3>
 }
 
 @code {
@@ -47,12 +55,52 @@ else
             exception.Redirect();
         }
     }
+    @inject NavigationManager NavigationManager
+
+    private void AddRelease()
+    {
+        NavigationManager.NavigateTo("/management/addRelease/");
+    }
 
     private void EditRelease(int releaseId)
     {
+        NavigationManager.NavigateTo($"/management/updateRelease/{releaseId}");
     }
 
-    private void DeleteRelease(int releaseId)
+    @inject IJSRuntime JS
+
+    private async Task DeleteRelease(int releaseId)
     {
+        bool confirm = await JS.InvokeAsync<bool>("confirm", "Are you sure you want to delete this release?");
+
+        if (confirm)
+        {
+            var client = HttpClientFactory.CreateClient("DefectReporter.ServerAPI");
+
+            var response = await client.DeleteAsync($"api/management/deleteRelease/{releaseId}");
+
+            if (response.IsSuccessStatusCode)
+            {
+                await LoadReleases();
+            }
+            else
+            {
+                var errorMessage = await response.Content.ReadAsStringAsync();
+            }
+        }
+    }
+
+    private async Task LoadReleases()
+    {
+        var client = HttpClientFactory.CreateClient("DefectReporter.PublicServerAPI");
+
+        try
+        {
+            releases = await client.GetFromJsonAsync<List<Release>>("api/management/getreleases");
+        }
+        catch (AccessTokenNotAvailableException exception)
+        {
+            exception.Redirect();
+        }
     }
 }
