--- a/DefectReporter/Client/Pages/Tests/Index.razor
+++ b/DefectReporter/Client/Pages/Tests/Index.razor
@@ -40,6 +40,12 @@
         </tbody>
     </table>
 }
+else if (tests == null)
+{
+    <div class="spinner-border text-center" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+}
 else
 {
     <h3>Currently there is no tests in database.</h3>
