--- a/DefectReporter/Client/Pages/Defect/Index.razor
+++ b/DefectReporter/Client/Pages/Defect/Index.razor
@@ -41,8 +41,10 @@
 }
 else if (defects == null)
 {
-    <div class="spinner-border text-center" role="status">
-        <span class="sr-only">Loading...</span>
+    <div class="d-flex justify-content-center align-items-center" style="height: 30vh;">
+        <div class="spinner-border text-center" role="status" style="width: 5rem; height: 5rem;">
+            <span class="sr-only">Loading...</span>
+        </div>
     </div>
 }
 else
