--- a/DefectReporter/Client/Pages/Defect/Details.razor
+++ b/DefectReporter/Client/Pages/Defect/Details.razor
@@ -2,6 +2,7 @@
 @using DefectReporter.Shared.Models.Application
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using DefectReporter.Shared.Helpers
+@using Markdig
 
 @inject IHttpClientFactory HttpClientFactory
 @inject IJSRuntime JSRuntime
@@ -18,25 +19,16 @@
 else
 {
     <div class="container-fluid mt-4">
-        <h3>Defect Details</h3>
-
+        <h3 class="text-lg-center">@defect.Title</h3>
+        <hr>
         <div class="card">
             <div class="card-body">
-                <div class="row border-bottom">
-                    <div class="col-md-3">
-                        <p class="card-text"><strong>Title:</strong></p>
-                    </div>
-                    <div class="col-md-9">
-                        <p class="card-text">@defect.Title</p>
-                    </div>
-                </div>
-
                 <div class="row border-bottom">
                     <div class="col-md-3">
                         <p class="card-text"><strong>Description:</strong></p>
                     </div>
                     <div class="col-md-9">
-                        <p class="card-text">@defect.Description</p>
+                        <p class="card-text">@((MarkupString)Markdown.ToHtml(defect.Description))</p>
                     </div>
                 </div>
 
@@ -173,7 +165,11 @@ else
             @foreach (var comment in defect.Comments)
             {
                 <div class="card mt-3">
-                    <div class="card-body">
+                    <div class="card-body position-relative">
+                        @if (comment.OwnerId == authenticationState.User.FindFirst("sub")?.Value)
+                        {
+                            <button class="btn-sm btn-danger position-absolute top-0 end-0 m-2" @onclick="() => DeleteComment(comment.Id)">Delete</button>
+                        }
                         <p class="card-text"><strong>@comment.OwnerName:</strong></p>
                         <p class="card-text">@comment.Content</p>
                         <p class="card-text"><em>Posted on @comment.CreateDate</em></p>
@@ -198,6 +194,7 @@ else
 @code {
     [Parameter]
     public string DefectId { get; set; }
+    private string htmlDescription;
     private string message;
     private string NewComment { get; set; }
     private string softwareBuild { get; set; }
@@ -245,6 +242,29 @@ else
             else
             {
                 message = ex.Message;
+            }
+        }
+    }
+
+    @inject IJSRuntime JS
+
+    private async Task DeleteComment(int commentId)
+    {
+        bool confirm = await JS.InvokeAsync<bool>("confirm", "Are you sure you want to delete this comment?");
+
+        if (confirm)
+        {
+            var client = HttpClientFactory.CreateClient("DefectReporter.ServerAPI");
+
+            var response = await client.DeleteAsync($"api/comment/deleteComment/{commentId}");
+
+            if (response.IsSuccessStatusCode)
+            {
+                await LoadDefect();
+            }
+            else
+            {
+                var errorMessage = await response.Content.ReadAsStringAsync();
             }
         }
     }
