--- a/DefectReporter/Client/Pages/Defect/Create.razor
+++ b/DefectReporter/Client/Pages/Defect/Create.razor
@@ -112,7 +112,7 @@ else
         var authstate = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
 
         defect.Description = 
-        "Example of description\n1. Reproduction step\n\ta) Start the software\n\tb) Do action\n\tc) SW throws excepction <yours exception>\n2. Environment setup\n\ta) OS: Windows 11\n\tb) RAM: 16GB\n\tc) CPU: Intel I5 11400\n3. Regression\n\t- Yes, it was working on SW_x_x_x but issue occurs after <change>";
+        "Example of description\n1. Reproduction step\n\t1.1. Start the software\n\t1.2. Do action\n\t1.3. SW throws excepction <yours exception>\n2. Environment setup\n\t2.1. OS: Windows 11\n\t2.2. RAM: 16GB\n\t2.3. CPU: Intel I5 11400\n3. Regression\n\t- Yes, it was working on SW_x_x_x but issue occurs after <change>";
 
         try
         {
