--- a/DefectReporter/Client/Pages/Defect/Create.razor
+++ b/DefectReporter/Client/Pages/Defect/Create.razor
@@ -9,7 +9,7 @@
 
 @inject IHttpClientFactory HttpClientFactory
 
-<h3 class="text-center">Defects</h3>
+<h3 class="text-center">Report a new defect</h3>
 <br />
 
 @if (message != null)
@@ -81,7 +81,7 @@ else
         </div>
 
         <div class="form-group">
-            <label class="col-sm-2 col-form-label">The user who take care on</label>
+            <label class="col-sm-2 col-form-label">Current owner</label>
             <InputSelect id="currentUser" class="form-control" @bind-Value="defect.CurrentUserId">
                 @foreach (var user in applicationUsers)
                 {
@@ -89,6 +89,17 @@ else
                 }
             </InputSelect>
             <ValidationMessage For="@(() => defect.CurrentUserId)" />
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 col-form-label">Users involved</label>
+            <InputSelect id="currentUser" class="form-control" @bind-Value="defect.UsersInvolvedEmails">
+                @foreach (var user in usersSelectMenu)
+                {
+                    <option value="@user.Value">@user.Key - @user.Value</option>
+                }
+            </InputSelect>
+            <ValidationMessage For="@(() => defect.UsersInvolvedEmails)" />
         </div>
 
         <br>
@@ -102,6 +113,7 @@ else
     private List<Release> releases = new List<Release>();
     private List<SoftwareBuild> softwareBuilds = new List<SoftwareBuild>();
     private List<ApplicationUser> applicationUsers = new List<ApplicationUser>();
+    private Dictionary<string, string> usersSelectMenu = new Dictionary<string, string>();
 
     @inject AuthenticationStateProvider GetAuthenticationStateAsync
 
@@ -118,6 +130,14 @@ else
         {
             releases = await client.GetFromJsonAsync<List<Release>>("api/management/getreleases");
             applicationUsers = await client.GetFromJsonAsync<List<ApplicationUser>>("api/user/getusers");
+
+            usersSelectMenu.Add(key: "Select ", value: "User");
+
+            foreach (var user in applicationUsers)
+            {
+                usersSelectMenu.Add(key: user.FirstName + " " + user.LastName, value: user.Email);
+            }
+
 
             releases.Insert(index: 0, new Release
             {
