Added views for test controller

--- a/DefectReporter/Client/Pages/Feature/Edit.razor
+++ b/DefectReporter/Client/Pages/Feature/Edit.razor
@@ -102,7 +102,7 @@ else
 
             if (response.IsSuccessStatusCode)
             {
-                NavigationManager.NavigateTo("/feature/index");
+                this.GoBackToIndex();
             }
             else
             {
