--- a/DefectReporter/Client/Pages/Defect/Create.razor
+++ b/DefectReporter/Client/Pages/Defect/Create.razor
@@ -91,16 +91,13 @@ else
             <ValidationMessage For="@(() => defect.CurrentUserId)" />
         </div>
 
-        <div class="form-group">
-            <label class="col-sm-2 col-form-label">Users involved</label>
-            <InputSelect id="currentUser" class="form-control" @bind-Value="defect.UsersInvolvedEmails">
-                @foreach (var user in usersSelectMenu)
-                {
-                    <option value="@user.Value">@user.Key - @user.Value</option>
-                }
-            </InputSelect>
-            <ValidationMessage For="@(() => defect.UsersInvolvedEmails)" />
-        </div>
+        <label for="usersSelect">Select Users:</label>
+        <InputSelect id="usersSelect" multiple="true" @bind-Value="selectedUsers">
+            @foreach (var user in usersSelectMenu)
+            {
+                <option value="@user.Value">@user.Value</option>
+            }
+        </InputSelect>
 
         <br>
         <button type="submit" class="btn btn-primary">Report defect</button>
@@ -114,6 +111,7 @@ else
     private List<SoftwareBuild> softwareBuilds = new List<SoftwareBuild>();
     private List<ApplicationUser> applicationUsers = new List<ApplicationUser>();
     private Dictionary<string, string> usersSelectMenu = new Dictionary<string, string>();
+    private List<string> selectedUsers = new List<string>();
 
     @inject AuthenticationStateProvider GetAuthenticationStateAsync
 
@@ -186,6 +184,7 @@ else
         defect.Status = DefectStatusEnum.New;
         defect.CurrentuserName = applicationUsers.First(user => user.Id == defect.CurrentUserId).UserName;
         defect.CompletedReason = DefectCompletedReasonEnum.InProgress;
+        defect.UsersInvolvedEmails = selectedUsers;
 
         var response = await client.PostAsJsonAsync("/api/defect/createDefect", defect);
 
