--- a/DefectReporter/Client/Pages/Feature/Index.razor
+++ b/DefectReporter/Client/Pages/Feature/Index.razor
@@ -37,13 +37,15 @@
 }
 else if (features == null)
 {
-    <div class="spinner-border text-center" role="status">
-        <span class="sr-only">Loading...</span>
-    </div>
+    <h3>Currently there is no features in database.</h3>
 }
 else
 {
-    <h3>Currently there is no features in database.</h3>
+    <div class="d-flex justify-content-center align-items-center" style="height: 30vh;">
+        <div class="spinner-border text-center" role="status" style="width: 5rem; height: 5rem;">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
 }
 
 @code {
