--- a/DefectReporter/Client/Pages/Management/SoftwareBuilds/Index.razor
+++ b/DefectReporter/Client/Pages/Management/SoftwareBuilds/Index.razor
@@ -28,10 +28,16 @@
         </ul>
     </div>
 }
+else if (softwareBuilds == null)
+{
+    <h3>Currently there is no software builds in database.</h3>
+}
 else
 {
-    <div class="spinner-border text-center" role="status">
-        <span class="sr-only">Loading...</span>
+    <div class="d-flex justify-content-center align-items-center" style="height: 30vh;">
+        <div class="spinner-border text-center" role="status" style="width: 5rem; height: 5rem;">
+            <span class="sr-only">Loading...</span>
+        </div>
     </div>
 }
 
