--- a/DefectReporter/Client/Pages/Tests/Index.razor
+++ b/DefectReporter/Client/Pages/Tests/Index.razor
@@ -6,7 +6,8 @@
 
 @if (tests.Count != 0)
 {
-    <h3 class="text-center">Tests list</h3>
+    <h3 class="text-center">Available tests in data base</h3>
+    <hr />
     <br />
     <table class="table">
         <thead>
@@ -42,13 +43,15 @@
 }
 else if (tests == null)
 {
-    <div class="spinner-border text-center" role="status">
-        <span class="sr-only">Loading...</span>
-    </div>
+    <h3>Currently there is no tests in database.</h3>
 }
 else
 {
-    <h3>Currently there is no tests in database.</h3>
+    <div class="d-flex justify-content-center align-items-center" style="height: 30vh;">
+        <div class="spinner-border text-center" role="status" style="width: 5rem; height: 5rem;">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
 }
 
 @code {
@@ -68,11 +71,47 @@ else
         }
     }
 
+    @inject NavigationManager NavigationManager
+
     private void EditTest(int testId)
     {
+        NavigationManager.NavigateTo($"/test/updatetest/{testId}");
     }
 
-    private void DeleteTest(int testId)
+    @inject IJSRuntime JS
+
+    private async Task DeleteTest(int testId)
     {
+        bool confirm = await JS.InvokeAsync<bool>("confirm", "Are you sure you want to delete this test?");
+
+        if (confirm)
+        {
+            var client = HttpClientFactory.CreateClient("DefectReporter.ServerAPI");
+
+            var response = await client.DeleteAsync($"api/test/deleteTest/{testId}");
+
+            if (response.IsSuccessStatusCode)
+            {
+                await LoadTests();
+            }
+            else
+            {
+                var errorMessage = await response.Content.ReadAsStringAsync();
+            }
+        }
+    }
+
+    private async Task LoadTests()
+    {
+        var client = HttpClientFactory.CreateClient("DefectReporter.PublicServerAPI");
+
+        try
+        {
+            tests = await client.GetFromJsonAsync<List<Test>>("api/test/getTests");
+        }
+        catch (AccessTokenNotAvailableException exception)
+        {
+            exception.Redirect();
+        }
     }
 }
